Cambio de método getLast()