@@ -33,28 +33,28 @@ public class Main {
 
         // CASO 1: alquiler de coche con descuento porcentaje
         Customer1.rentCarOnSite(fecha1, fecha2, coche1, oficina1, percentagePromotion, "Alquiler de coche con descuento por porcentaje");
-        double price1 = Customer1.getRentalsOnSite().getLast().getPrice();
+        double price1 = Customer1.getRentalsOnSite().get(Customer1.getRentalsOnSite().size()-1).getPrice();
         System.out.println("El precio del alquiler con descuento por porcentaje es: " + price1 + "\n");
 
 
         // CASO 2: alquiler de coche con descuento cantidad
         Customer2.rentCarOnSite(fecha1, fecha2, coche2, oficina1, amountPromotion, "Alquiler de coche con descuento por cantidad");
-        double price2 = Customer2.getRentalsOnSite().getLast().getPrice();
+        double price2 = Customer2.getRentalsOnSite().get(Customer2.getRentalsOnSite().size()-1).getPrice();
         System.out.println("El precio del alquiler con descuento por cantidad es: " + price2 + "\n");
         
         
         // CASO 3: alquiler de coche sin descuento
         Customer3.rentCarOnSite(fecha1, fecha2, coche3, oficina1, null, "Alquiler de coche sin descuento");
-        double price3 = Customer3.getRentalsOnSite().getLast().getPrice();
+        double price3 = Customer3.getRentalsOnSite().get(Customer3.getRentalsOnSite().size()-1).getPrice();
         System.out.println("El precio del alquiler sin descuento es: " + price3 + "\n");
 
 
         //CASO 4: aplicar primero una estrategia de descuento y después cambiarla
         Customer4.rentCarOnSite(fecha1, fecha2, coche4, oficina2, amountPromotion, "Alquiler de coche con descuento por cantidad");
-        double price4 = Customer4.getRentalsOnSite().getLast().getPrice();
+        double price4 = Customer4.getRentalsOnSite().get(Customer4.getRentalsOnSite().size()-1).getPrice();
         System.out.println("El precio del alquiler con descuento por cantidad es: " + price4);
-        Customer4.getRentalsOnSite().getLast().setPromotion(percentagePromotion);
-        double price4changed = Customer4.getRentalsOnSite().getLast().getPrice();
+        Customer4.getRentalsOnSite().get(Customer4.getRentalsOnSite().size()-1).setPromotion(percentagePromotion);
+        double price4changed = Customer4.getRentalsOnSite().get(Customer4.getRentalsOnSite().size()-1).getPrice();
         System.out.println("El precio del alquiler con descuento por porcentaje es: " + price4changed);
     }
 }
